Partially revert "Table: Fix selection border of first row when header is invisible"
Making the border-top color invisible when table is not in focus does
not work correctly in the case of outline tables. The LESS part of
commit d948ab4bbe2540ac11eeddb3cf8191dd184c3b67 was therefore reverted.
The intended fix was implemented in the specific component that caused
the initial problem (different repository).

The "header-invisible" class is still helpful and required.

--- a/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
+++ b/org.eclipse.scout.rt.ui.html/src/main/js/scout/table/Table.less
@@ -30,10 +30,6 @@
     }
   }
 
-  &:not(:focus):not(.focused).header-invisible > .table-data > .table-row.selected.first {
-    border-top-color: transparent;
-  }
-
   & > .menubar:not(.main-menubar) {
     padding-left: @table-menubar-padding;
     padding-right: @table-menubar-padding;
